--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-discord.py
+discord.py>=2.3
 asyncpg
-gspread
-oauth2client
 python-dotenv
+gspread
+google-auth
 google-api-python-client
-google-auth-httplib2
-google-auth-oauthlib
+oauth2client
 
